--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ Amén, amén, amén.`
         "letra": 
 `Santo, Santo, Santo 
 Es el Señor Dios del universo
-Él nos esta en el cielo 
+Llenos están el cielo 
 Y la tierra de tu gloria
 
 Hosanna, Hosanna, Hosanna en el cielo
@@ -431,8 +431,22 @@ Hosanna, Hosanna, Hosanna en el cielo`
       {
         "titulo": "Cordero de Dios",
         "tema": "cordero",
-        "letra": `Cordero de Dios que quitas el pecado del mundo,
-ten piedad de nosotros... danos la paz.`
+        "letra": 
+`Cordero de Dios que quitas
+El pecado del mundo
+Ten piedad de nosotros
+Ten piedad de nosotros
+
+Cordero de Dios que quitas
+El pecado del mundo
+Ten piedad de nosotros
+Ten piedad de nosotros
+
+Cordero de Dios que quitas
+El pecado del mundo
+Danos la paz, Danos la paz
+Danos, danos, danos la paz
+Danos, danos, danos la paz.`
       }
     ];
   
