--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Llena mi alma, dame tu amor
 Eres tú mi fuerza, solo tú, Señor
 Eres mi camino y mi libertad
 Nada en este mundo nos separará
-Ya sé que tu mano fuerte no me dejará
+Yo sé que tu mano fuerte no me dejará
 De todos los males tú me librarás
 Te lo pido, dame tu paz
 
