--- a/index.html
+++ b/index.html
@@ -412,6 +412,36 @@ Amén, amén, amén.
 Amén, amén, amén.`
       },
       {
+        "titulo": "Gloria",
+        "tema": "gloria",
+        "letra": 
+`Gloria al señor, que reina en el cielo
+Y en la tierra paz, a los hombres que ama él.
+
+Señor te alabamos 
+Señor te bendecimos
+Todos te adoramos
+Gracias por tu gloria.
+
+Gloria al señor, que reina en el cielo
+Y en la tierra paz, a los hombres que ama él.
+
+Tu eres el cordero, que quita el pecado
+Ten piedad de nosotros
+Y escucha nuestra oracion.
+
+Gloria al señor, que reina en el cielo
+Y en la tierra paz, a los hombres que ama él.
+
+Tu solo eres santo
+Tu solo el altisimo
+Con el espiritu santo
+En la gloria de dios padre.
+
+Gloria al señor, que reina en el cielo
+Y en la tierra paz, a los hombres que ama él.`
+      },
+      {
         "titulo": "Santo, Santo, Santo",
         "tema": "santo",
         "letra": 
