--- a/index.html
+++ b/index.html
@@ -316,6 +316,32 @@ Ya no tengo más temor si tú estás aquí
 Te lo ruego, quédate en mí.`
       },
       {
+        "titulo": "Las Manos Abiertas",
+        "tema": "comunion",
+        "letra": 
+`Las Manos abiertas ante Ti, Señor,
+Para ofrecerte al mundo
+Las manos abiertas ante Ti, Señor,
+Nuestro gozo es profundo. X2
+
+Guárdanos pequeños ante Ti, Señor,
+Simples y puros como un manantial
+Guardanos pequeños antes nuestros hermanos
+Y disponibles como el agua.
+
+Las Manos abiertas ante Ti, Señor,
+Para ofrecerte al mundo
+Las manos abiertas ante Ti, Señor,
+Nuestro gozo es profundo.
+
+Guárdanos pequeños ante Ti, Señor
+Llenos de amor, llenos de gozo
+Guárdanos pequeños ante nuestros hermanos,
+Simples caminos que nos lleven a Ti.
+
+Ere`
+      },
+      {
         "titulo": "Alma Misionera",
         "tema": "salida",
         "letra": 
@@ -416,7 +442,7 @@ Amén, amén, amén.`
         "tema": "gloria",
         "letra": 
 `Gloria al señor, que reina en el cielo
-Y en la tierra paz, a los hombres que ama él.
+Y en la tierra paz, a los hombres que ama él. x2
 
 Señor te alabamos 
 Señor te bendecimos
