--- a/index.html
+++ b/index.html
@@ -339,7 +339,10 @@ Llenos de amor, llenos de gozo
 Guárdanos pequeños ante nuestros hermanos,
 Simples caminos que nos lleven a Ti.
 
-Ere`
+Las Manos abiertas ante Ti, Señor,
+Para ofrecerte al mundo
+Las manos abiertas ante Ti, Señor,
+Nuestro gozo es profundo.`
       },
       {
         "titulo": "Alma Misionera",
