--- a/index.html
+++ b/index.html
@@ -306,6 +306,38 @@ Se transformaran
 En tu cuerpo y sangre señor
 en nuestro manjar.`
       },
+      {
+        "titulo": "Para Ti",
+        "tema": "ofertorio",
+        "letra": 
+`Para Ti es mi música, Señor
+Mi oración es música, Señor
+Para Ti, mi oración
+Para Ti es mi música, Señor
+
+El Trabajo señor te entregamos
+Es Pan de vida, amor grande haciaTi
+
+Para Ti es mi música, Señor
+Mi oración es música, Señor
+Para Ti, mi oración
+Para Ti es mi música, Señor
+
+Con el vino recibe mi gozo
+Que en tu sangre preciosa se transformará
+
+Para Ti es mi música, Señor
+Mi oración es música, Señor
+Para Ti, mi oración
+Para Ti es mi música, Señor
+
+Santifica Señor nuestros dones
+Transfórmanos por ellos, en oblacion a ti
+Para Ti es mi música, Señor
+Mi oración es música, Señor
+Para Ti, mi oración
+Para Ti es mi música, Señor`
+      },
       
       {
         "titulo": "Symbolum 77",
