--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
         "titulo": "Caminare en presencia del señor",
         "tema": "entrada",
         "letra": 
-
  `Caminaré en presencia del Señor,
 Caminaré en presencia del Señor
 
@@ -257,6 +256,41 @@ Mis ojos de las lágrimas, mis pies de la caída...
 
 Caminaré en presencia del Señor,
 Caminaré en presencia del Señor `
+      },
+      {
+        "titulo": "Dios nos convoca",
+        "tema": "entrada",
+        "letra": 
+ `Dios nos convoca
+ Venid y escuchemos su voz
+ La mesa ha preparado
+ Su pan es salvación
+ Gracias Señor
+ Por ser tus invitados. x2
+ 
+ Venid celebrad la palabra
+ Venid acoged la verdad
+ Y en hermandad
+ Cantad la nueva alianza
+ 
+ Dios nos convoca
+ Venid y escuchemos su voz
+ La mesa ha preparado
+ Su pan es salvación
+ Gracias Señor
+ Por ser tus invitados.
+ 
+ Venid celebrad la esperanza
+ Venid a la cena pascual
+ Y en hermandad
+ Cantad la nueva alianza
+ 
+ Dios nos convoca
+ Venid y escuchemos su voz
+ La mesa ha preparado
+ Su pan es salvación
+ Gracias Señor
+ Por ser tus invitados.`
       },
       
       {
