--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@ Caminaré en presencia del Señor `
         "tema": "ofertorio",
         "letra": 
 `Vino y pan en oblación
-esperan el milagro del Señor.
+Esperan el milagro del Señor.
 
-Ve nuestra ofrenda sobre tu santo altar:
-era en los campos dulce vid y trigal.
+Ve nuestra ofrenda sobre tu santo altar
+Era en los campos dulce vid y trigal.
 
 Pero tú, por tu bondad
-transformas nuestra ofrenda en ti, Señor.
+Transformas nuestra ofrenda en ti, Señor.
 
 Toma mi vida y también cambiará.
 Llena mi alma de tu gracia y tu paz.
