--- a/index.html
+++ b/index.html
@@ -372,6 +372,46 @@ Mi oración es música, Señor
 Para Ti, mi oración
 Para Ti es mi música, Señor`
       },
+      {
+        "titulo": "Esto que te doy",
+        "tema": "ofertorio",
+        "letra": 
+`Esto que te doy es vino y pan Señor
+Esto que te doy es mi trabajo
+Es mi corazón, mi alma
+Es mi cuerpo y mi razón
+El esfuerzo de mi caminar
+
+Toma mi vida, ponla en tu corazón,
+Dame tu mano y llévame
+Cambia mi pan en tu carne y mi vino en tu sangre
+Y a mi, Señor, renuévame, 
+Límpiame Y sálvame
+
+Esto que te doy mi vida es Señor
+Es mi amor también es mi dolor
+Es la ilusión, mis sueños
+Es mi gozo y mi llorar
+Es mi canto y mi oración
+
+Toma mi vida, ponla en tu corazón,
+Dame tu mano y llévame
+Cambia mi pan en tu carne y mi vino en tu sangre
+Y a mi, Señor, renuévame, 
+Límpiame Y sálvame
+
+Esto que te doy, no sólo yo, Señor
+Esta voz también es de mi hermano
+Es la unión, la paz, el orden,
+La armonía y felicidad,
+Es un canto en comunidad
+
+Toma mi vida, ponla en tu corazón,
+Dame tu mano y llévame
+Cambia mi pan en tu carne y mi vino en tu sangre
+Y a mi, Señor, renuévame, 
+Límpiame Y sálvame`
+      },
       
       {
         "titulo": "Symbolum 77",
