--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   <script>
     const cantos = [
       {
-        "titulo": "Caminare en presencia del señor",
+        "titulo": "Caminare En Presencia Del Señor",
         "tema": "entrada",
         "letra": 
  `Caminaré en presencia del Señor,
@@ -291,6 +291,35 @@ Caminaré en presencia del Señor `
  Su pan es salvación
  Gracias Señor
  Por ser tus invitados.`
+      },
+      {
+        "titulo": "Venimos Hoy A Tu Altar",
+        "tema": "entrada",
+        "letra": 
+ `Venimos hoy a tu altar A cantarte Señor
+Pues tu eres la alegría De nuestro corazón
+Pues tu eres la alegría De nuestro corazón. X2
+
+Tu hiciste los cielos, Los llenas de estrellas, de luz y calor
+Tu pintaste la aurora, Hiciste las nubes, las puestas de sol
+
+Venimos hoy a tu altar A cantarte Señor
+Pues tu eres la alegría De nuestro corazón
+Pues tu eres la alegría De nuestro corazón
+
+Tu creaste la risa, La paz y la dicha, la felicidad
+Tu al darnos la vida Nos das tus riquezas tu eterna amistad
+
+Venimos hoy a tu altar A cantarte Señor
+Pues tu eres la alegría De nuestro corazón
+Pues tu eres la alegría De nuestro corazón
+
+Tu nos diste a tu Madre, Nos diste tu cuerpo, tu sangre es manjar
+Tu nos diste esperanza, La fe y nos hiciste capaces de amar
+
+Venimos hoy a tu altar A cantarte Señor
+Pues tu eres la alegría De nuestro corazón
+Pues tu eres la alegría De nuestro corazón.`
       },
       
       {
