--- a/index.html
+++ b/index.html
@@ -620,6 +620,38 @@ Por no saber de ti
 Simplemente
 Por no saber de ti`
       },
+      {
+        "titulo": "Maria Mirame",
+        "tema": "salida",
+        "letra": 
+`Maria mírame, Maria mírame
+Si tú me miras el también me mirara
+Madre mía mírame, De la mano llévame
+Muy cerca de él
+Que ahí me quiero quedar. x2
+
+Maria cubreme con tu manto
+Que tengo miedo y no se rezar
+Que por tus ojos misericordiosos
+Tendré la fuerza, tendré la paz
+
+Maria mírame, Maria mírame
+Si tú me miras el también me mirara
+Madre mía mírame, De la mano llévame
+Muy cerca de él
+Que ahí me quiero quedar
+
+Madre consuélame de mis penas
+Es que no quiero ofenderte más
+Que por tus ojos misericordiosos
+Quiero ir al cielo y verlos ya
+
+Maria mírame, Maria mírame
+Si tú me miras el también me mirara
+Madre mía mírame, De la mano llévame
+Muy cerca de él
+Que ahí me quiero quedar`
+      },
       
       {
         "titulo": "Gloria - Misa Ritmica",
