--- a/index.html
+++ b/index.html
@@ -652,6 +652,43 @@ Madre mía mírame, De la mano llévame
 Muy cerca de él
 Que ahí me quiero quedar`
       },
+      {
+        "titulo": "Fiesta Cristo Rey",
+        "tema": "salida",
+        "letra": 
+`Un grito de guerra se escucha En la faz de la Tierra y en todo lugar
+Los prestos guerreros empuñan su espada Y se enlistan para pelear
+Para eso han sido entrenados, Defenderán la verdad
+Y no les será arrebatado, El fuego que en su sangre está
+
+Viva Cristo rey, viva Cristo rey
+El grito de guerra que enciende la tierra
+Viva Cristo rey, nuestro soberano señor
+Nuestro capitán y campeón
+Pelear por él, es todo un honor
+
+Sabemos que esta batalla no es fácil Y muchos se acobardarán
+Y bajo los dardos de nuestro enemigo Sin duda perecerán
+Yo tendré mi espada en alto Como la usa mi señor
+A él nada lo ha derrotado Su fuerza es la de Dios
+
+Viva Cristo rey, viva Cristo rey
+El grito de guerra que enciende la tierra
+Viva Cristo rey, nuestro soberano señor
+Nuestro capitán y campeón
+Pelear por él, es todo un honor
+
+No conocemos mayor alegría No existe más honroso afán
+Que con mis hermanos estar en la línea Y juntos la vida entregar
+A él que merece la gloria Y nos reclutó por amor
+Ante él las rodillas se doblan Y se postra el corazón
+
+Viva Cristo rey, viva Cristo rey
+El grito de guerra que enciende la tierra
+Viva Cristo rey, nuestro soberano señor
+Nuestro capitán y campeón
+Pelear por él, es todo un honor.`
+      },
       
       {
         "titulo": "Gloria - Misa Ritmica",
