--- a/index.html
+++ b/index.html
@@ -321,6 +321,70 @@ Venimos hoy a tu altar A cantarte Señor
 Pues tu eres la alegría De nuestro corazón
 Pues tu eres la alegría De nuestro corazón.`
       },
+      {
+        "titulo": "Iglesia Peregrina",
+        "tema": "entrada",
+        "letra": 
+ `Todos unidos formando un solo cuerpo
+Un pueblo que en la pascua nació
+Miembros de Cristo en sangre redimidos
+¡Iglesia peregrina de Dios!
+
+Vive en nosotros la fuerza del espíritu
+Que el hijo desde el padre envió
+El nos empuja nos guía y alimenta
+¡Iglesia peregrina de Dios!
+
+Somos en la tierra
+Semilla de otro reino
+Somos testimonio de amor
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!
+
+Rugen tormentas Y a veces nuestra barca
+Parece que ha perdido el timón
+Miras con miedo, no tienes confianza
+¡Iglesia peregrina de Dios!
+
+Una esperanza nos llena de alegría
+Presencia que el señor prometió
+Vamos cantando el viene con nosotros
+¡Iglesia peregrina de Dios!
+
+Somos en la tierra
+Semilla de otro reino
+Somos testimonio de amor
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!
+
+Todos nacidos en un solo bautismo
+Unidos a la misma comunión
+Todos viviendo en una misma casa
+¡Iglesia peregrina de Dios!
+
+Todos prendidos en una misma suerte
+Ligados a la misma salvación
+Somos un cuerpo y Cristo es la cabeza
+¡Iglesia peregrina de Dios!
+
+Somos en la tierra
+Semilla de otro reino
+Somos testimonio de amor
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!
+Paz para las guerras
+Y luz entre las sombras
+¡Iglesia peregrina de Dios!`
+      },
       
       {
         "titulo": "Vino y Pan",
