--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Caminaré en presencia del Señor,
 Caminaré en presencia del Señor `
       },
       {
-        "titulo": "Dios nos convoca",
+        "titulo": "Dios Nos Convoca",
         "tema": "entrada",
         "letra": 
  `Dios nos convoca
@@ -466,7 +466,7 @@ Para Ti, mi oración
 Para Ti es mi música, Señor`
       },
       {
-        "titulo": "Esto que te doy",
+        "titulo": "Esto Que Te Doy",
         "tema": "ofertorio",
         "letra": 
 `Esto que te doy es vino y pan Señor
@@ -504,6 +504,25 @@ Dame tu mano y llévame
 Cambia mi pan en tu carne y mi vino en tu sangre
 Y a mi, Señor, renuévame, 
 Límpiame Y sálvame`
+      },
+       {
+        "titulo": "Ante Ti Señor Presentamos Hoy",
+        "tema": "ofertorio",
+        "letra": 
+`Ante ti, señor, presentamos hoy,
+Presentamos vino y pan
+Ante ti, señor, presentamos hoy
+Presentamos como ofrenda la amistad. x2
+
+Con el pan, Señor, te llevamos hoy
+El esfuerzo y el dolor.
+Con el pan, Señor, te entregamos hoy,
+Te entregamos nuestro amor.
+
+Presentamos hoy en tu altar de amor,
+Presentamos la oración
+Que el pan, Señor, se transforme hoy
+En maná de salvación.`
       },
       
       {
