--- a/index.html
+++ b/index.html
@@ -511,13 +511,18 @@ Límpiame Y sálvame`
         "letra": 
 `Ante ti, señor, presentamos hoy,
 Presentamos vino y pan
-Ante ti, señor, presentamos hoy
+Ante ti, señor, en tu altar
 Presentamos como ofrenda la amistad. x2
 
 Con el pan, Señor, te llevamos hoy
 El esfuerzo y el dolor.
 Con el pan, Señor, te entregamos hoy,
 Te entregamos nuestro amor.
+
+Ante ti, señor, presentamos hoy,
+Presentamos vino y pan
+Ante ti, señor, en tu altar
+Presentamos como ofrenda la amistad.
 
 Presentamos hoy en tu altar de amor,
 Presentamos la oración
