--- a/index.html
+++ b/index.html
@@ -835,6 +835,37 @@ En la gloria de dios padre.
 Gloria al señor, que reina en el cielo
 Y en la tierra paz, a los hombres que ama él.`
       },
+      {
+        "titulo": "Gloria A Nuestro Dios",
+        "tema": "gloria",
+        "letra": 
+`Gloria a nuestro dios en lo alto de los cielos
+Y en la tierra paz a los por él amados. X2
+
+Señor te alabamos
+Señor te bendicimos
+Todos te adoramos
+Gracias por tu inmensa gloria
+
+Gloria a nuestro dios en lo alto de los cielos
+Y en la tierra paz a los por él amados.
+
+Tú eres el cordero
+Que quitas el pecado
+Ten piedad de nosotros
+Y escucha nuestra oracion
+
+Gloria a nuestro dios en lo alto de los cielos
+Y en la tierra paz a los por él amados.
+
+Tú solo eres Santo
+Tú solo altisimo
+Con el Espiritu Santo
+En la gloria de Dios Padre
+
+Gloria a nuestro dios en lo alto de los cielos
+Y en la tierra paz a los por él amados.`
+      },
       
       {
         "titulo": "Santo, Santo, Santo",
