--- a/index.html
+++ b/index.html
@@ -385,6 +385,36 @@ Paz para las guerras
 Y luz entre las sombras
 ¡Iglesia peregrina de Dios!`
       },
+      {
+        "titulo": "Dios Nos Convoca",
+        "tema": "entrada",
+        "letra": 
+ `Reunidos en el nombre del señor
+Que nos ha congregado ante su altar;
+Celebremos el misterio de la fe
+Bajo el signo del amor y la unidad
+Celebremos el misterio de la fe
+Bajo el signo del amor y la unidad.
+
+Tú, Señor, das sentido a nuestra vida,
+Tu presencia nos ayuda a caminar,
+Tu Palabra es fuente de agua viva
+Que nosotros sedientos 
+A tu mesa venimos a buscar.
+
+Reunidos en el nombre del señor
+Que nos ha congregado ante su altar;
+Celebremos el misterio de la fe
+Bajo el signo del amor y la unidad
+Celebremos el misterio de la fe
+Bajo el signo del amor y la unidad.
+
+Purifica con tu gracia nuestras manos,
+Ilumina nuestra mente con tu luz
+Y la fe se fortalezca en tu Palabra
+Y tu Cuerpo tomado en alimento
+Nos traiga la salud.`
+      },
       
       {
         "titulo": "Vino y Pan",
