--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ Y luz entre las sombras
 ¡Iglesia peregrina de Dios!`
       },
       {
-        "titulo": "Dios Nos Convoca",
+        "titulo": "Reunidos En El Nombre Del Señor",
         "tema": "entrada",
         "letra": 
  `Reunidos en el nombre del señor
@@ -667,6 +667,45 @@ Ya no falta nada, lo tengo todo
 Te tengo a Ti
 Ya no falta nada, lo tengo todo
 Te tengo a Ti`
+      },
+      {
+        "titulo": "Tan Cerca De Ti",
+        "tema": "comunion",
+        "letra": 
+`Tan cerca de ti,
+Tan cerca de mí,
+Que hasta lo puedo tocar,
+Jesús esta aquí. X2
+
+Le hablare sin miedo al oído, 
+Le contaré las cosas que hay en mí; 
+Y que solo a Él le interesaran, 
+Él es más que un mito para mí
+
+Tan cerca de ti,
+Tan cerca de mí,
+Que hasta lo puedo tocar,
+Jesús esta aquí.
+
+No busques a Cristo en lo alto, 
+Ni lo busques en la oscuridad; 
+Muy cerca de ti, en tu corazón, 
+Puedes adorar a tu Señor
+
+Tan cerca de ti,
+Tan cerca de mí,
+Que hasta lo puedo tocar,
+Jesús esta aquí.
+
+Míralo a tu lado caminando, 
+Paseando entre la multitud; 
+Muchos ciegos son, porque no lo ven, 
+Ciegos de ceguera espiritual
+
+Tan cerca de ti,
+Tan cerca de mí,
+Que hasta lo puedo tocar,
+Jesús esta aquí.`
       },
       
       {
