--- a/index.html
+++ b/index.html
@@ -559,6 +559,94 @@ Presentamos la oración
 Que el pan, Señor, se transforme hoy
 En maná de salvación.`
       },
+      {
+        "titulo": "Te Ofrecemos Señor",
+        "tema": "ofertorio",
+        "letra": 
+`Te ofrecemos Señor
+Este pan y este vino
+Que en tu cuerpo y tu sangre
+Quedaran convertidos. X2
+
+Todos juntos Señor
+Te ofrcemos la vida
+La ilusión de vivir
+Nuestro amor y alegría
+
+Te ofrecemos Señor
+Este pan y este vino
+Que en tu cuerpo y tu sangre
+Quedaran convertidos. X2
+
+Hoy te consagramos
+Nuestra fe y nuestro canto
+El dolor y el llanto
+Nuestra union como hermanos
+
+Te ofrecemos Señor
+Este pan y este vino
+Que en tu cuerpo y tu sangre
+Quedaran convertidos. X2
+
+Tu eres pan de vida
+Y bebida de salvacion
+Es un gran milagro
+¡Bendito seas, Señor!
+
+Te ofrecemos Señor
+Este pan y este vino
+Que en tu cuerpo y tu sangre
+Quedaran convertidos. X2`
+      },
+      {
+        "titulo": "Te Ofrecemos Padre Nuestro",
+        "tema": "ofertorio",
+        "letra": 
+`Te ofrecemos Padre Nuestro
+Con el vino y con el pan
+Nuestras penas y alegrías
+El trabajo, nuestro afán. X2
+
+Como el trigo de los campos
+Bajo el signo de la cruz
+Se transformen nuestras vidas
+En el cuerpo de Jesús
+
+Te ofrecemos Padre Nuestro
+Con el vino y con el pan
+Nuestras penas y alegrías
+El trabajo, nuestro afán.
+
+A los pobres de la tierra
+A los que sufriendo están
+Cambia su dolor en vino
+Como la uva en el lagar
+
+Te ofrecemos Padre Nuestro
+Con el vino y con el pan
+Nuestras penas y alegrías
+El trabajo, nuestro afán.
+
+Estos dones son el signo
+Del esfuerzo de unidad
+Que los hombres realizamos
+En el campo y la ciudad
+
+Te ofrecemos Padre Nuestro
+Con el vino y con el pan
+Nuestras penas y alegrías
+El trabajo, nuestro afán.
+
+Es tu pueblo quien te ofrece
+Con los dones del altar
+La naturaleza entera
+Anhelando libertad
+
+Te ofrecemos Padre Nuestro
+Con el vino y con el pan
+Nuestras penas y alegrías
+El trabajo, nuestro afán.`
+      },
       
       {
         "titulo": "Symbolum 77",
@@ -845,6 +933,32 @@ El grito de guerra que enciende la tierra
 Viva Cristo rey, nuestro soberano señor
 Nuestro capitán y campeón
 Pelear por él, es todo un honor.`
+      },
+      {
+        "titulo": "Junto A Ti Maria",
+        "tema": "salida",
+        "letra": 
+`Junto a ti María, Como un niño quiero estar
+Tómame en tus brazos Guíame en mí caminar
+Quiero que me eduques, Que me enseñes a rezar
+Hazme transparente Lléname de paz
+
+Madre, madre
+Madre, madre
+
+Madre, madre
+Madre, madre
+
+Gracias, madre mía, Por llevarnos a Jesús
+Haznos más humildes Tan sencillos como tú
+Gracias madre mía, Por abrir tu corazón
+Porque nos congregas Y nos das tu amor
+
+Madre, madre
+Madre, madre
+
+Madre, madre
+Madre, madre`
       },
       
       {
