--- a/index.html
+++ b/index.html
@@ -795,7 +795,46 @@ Tan cerca de mí,
 Que hasta lo puedo tocar,
 Jesús esta aquí.`
       },
-      
+      {
+        "titulo": "Señor No Soy Digno",
+        "tema": "comunion",
+        "letra": 
+`Señor no soy digno
+De que entres en mi casa,
+Pero una palabra tuya,
+Bastará para sanarme
+
+Eres el pan de vida
+A todos das la paz
+Quien come de tu carne
+Por siempre vivirá
+
+Señor no soy digno
+De que entres en mi casa,
+Pero una palabra tuya,
+Bastará para sanarme
+
+Somos el nuevo pueblo 
+Que Cristo congregó
+Vivamos siempre unidos
+Testigos del amor
+
+Señor no soy digno
+De que entres en mi casa,
+Pero una palabra tuya,
+Bastará para sanarme
+
+Vamos por esta vida
+Buscando la verdad,
+La paz y la justicia,
+Un mundo que vendrá
+
+Señor no soy digno
+De que entres en mi casa,
+Pero una palabra tuya,
+Bastará para sanarme` 
+      },
+          
       {
         "titulo": "Alma Misionera",
         "tema": "salida",
