--- a/index.html
+++ b/index.html
@@ -834,6 +834,70 @@ De que entres en mi casa,
 Pero una palabra tuya,
 Bastará para sanarme` 
       },
+       {
+        "titulo": "Pan Transformado",
+        "tema": "comunion",
+        "letra": 
+`Pan transformado en el cuerpo de cristo
+Vino transformado en la sangre del señor
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Cristo nos dice tomen y coman
+Este es mi cuerpo que ha sido entregado
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Cristo en persona nos viene a liberar
+De nuestro egoísmo y la división fatal
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+¡Oh gran invento de cristo sabio y bueno
+Para alimentarnos con su sangre y con su cuerpo!
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Con este pan tenemos vida eterna
+Cristo nos invita a la gran resurrección
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Este alimento renueva nuestras fuerzas
+Para caminar a la gran liberación
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Cuando comulgamos nos unimos al señor
+Formamos todos juntos la familia del amor
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+En la familia de todos los cristianos
+Cristo quiere unirnos en la paz y en el amor
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Palabra hecha pan que nutre la confianza
+En la promesa de que tú estás con nosotros
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2
+
+Pan que nos da entusiasmo y valentía
+Para predicar tu evangelio a todo el mundo
+
+Eucaristía milagro de amor
+Eucaristía presencia del señor. X2`
+      },
           
       {
         "titulo": "Alma Misionera",
