--- a/index.html
+++ b/index.html
@@ -415,6 +415,20 @@ Y la fe se fortalezca en tu Palabra
 Y tu Cuerpo tomado en alimento
 Nos traiga la salud.`
       },
+      {
+        "titulo": "Cantad",
+        "tema": "entrada",
+        "letra": 
+`Cantad al Señor, Aleluya, Cantad al Señor aleluya. X2
+ 
+Cantad al señor un cantico nuevo, cantad al señor toda la tierra
+ 
+Cantad al Señor, Aleluya, Cantad al Señor aleluya. X2
+ 
+Cantad al Señor Bendecid su Nombre, proclamad día tras día su victoria
+
+Cantad al Señor, Aleluya, Cantad al Señor aleluya. X2`
+      },
       
       {
         "titulo": "Vino y Pan",
@@ -897,6 +911,32 @@ Para predicar tu evangelio a todo el mundo
 
 Eucaristía milagro de amor
 Eucaristía presencia del señor. X2`
+      },
+      {
+        "titulo": "Si Yo No Tengo Amor",
+        "tema": "comunion",
+        "letra": 
+`Si yo no tengo amor, yo nada soy Señor. X2
+
+El amor es comprensivo, el amor es servicial
+El amor no tiene envidia, el amor no busca el mal
+
+Si yo no tengo amor, yo nada soy Señor. X2
+
+El amor nunca se irrita, el amor no es descortés
+El amor no es egísta, el amor nunca es doblez
+
+Si yo no tengo amor, yo nada soy Señor. X2
+
+El amor disculpa todo, el amor todo lo cree
+El amor todo lo espera, el amor es siempre fiel
+
+Si yo no tengo amor, yo nada soy Señor. X2
+
+Nuestra fe, nuestra esperanza, frente a Dios terminarán
+El amor es algo eterno, nunca, nunca pasará
+
+Si yo no tengo amor, yo nada soy Señor. X2` 
       },
           
       {
