--- a/index.html
+++ b/index.html
@@ -429,6 +429,39 @@ Cantad al Señor Bendecid su Nombre, proclamad día tras día su victoria
 
 Cantad al Señor, Aleluya, Cantad al Señor aleluya. X2`
       },
+         "titulo": "Juntos Como Hermanos",
+        "tema": "entrada",
+        "letra": 
+ `Juntos como hermanos
+Miembros de una iglesia
+Vamos caminando
+Al encuentro del Señor
+
+Un largo caminar
+Por el desierto bajo el Sol
+No podemos avanzar
+Sin la ayuda del Señor
+
+Juntos como hermanos
+Miembros de una iglesia
+Vamos caminando
+Al encuentro del Señor
+
+Unidos al rezar
+Unidos en una canción
+Viviremos nuestra fe
+Con la ayuda del Señor
+
+Juntos como hermanos
+Miembros de una iglesia
+Vamos caminando
+Al encuentro del Señor
+
+La iglesia en marcha está
+A un mundo nuevo vamos ya
+Donde reinará el amor
+Donde reinará la paz`
+      },
       
       {
         "titulo": "Vino y Pan",
