--- a/index.html
+++ b/index.html
@@ -694,6 +694,61 @@ Con el vino y con el pan
 Nuestras penas y alegrías
 El trabajo, nuestro afán.`
       },
+    {
+        "titulo": "Entre Tus Manos",
+        "tema": "ofertorio",
+        "letra": 
+`Entre tus manos
+Está mi vida, Señor
+Entre tus manos
+Confio mi ser
+
+Hay que morir
+Para vivir
+Entre tus manos
+Confío mi ser
+
+Si el grano
+De trigo no muere
+Si no muere
+Solo quedará
+
+Pero si muere
+En abundancia dará
+Un fruto eterno
+Que no morirá
+
+Hay que morir
+Para vivir
+Entre tus manos
+Confío mi ser`
+      },
+    {
+        "titulo": "Tomalo Aceptalo",
+        "tema": "ofertorio",
+        "letra": 
+`Hoy señor venimos a ofrecerte este humilde pan
+Que es fruto del trabajo de la humanidad
+Y es signo de fraternidad
+Fe esperanza y caridad.
+
+Tomalo, aceptalo 
+Y por amor transformalo 
+En el cuerpo de jesus
+Bendito seas mi señor. X2
+
+Hoy señor venimos a ofrecerte el vino que nos das
+Para que sea llevado a tu santo altar
+Y es signo de fraternidad
+Fe esperanza y caridad
+
+Tomalo, aceptalo 
+y por amor transformalo 
+En la sangre de jesus
+Bendito seas mi señor. X2
+
+Bendito seas mi señor.`
+      },
       
       {
         "titulo": "Symbolum 77",
