--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@ y por amor transformalo
 En la sangre de jesus
 Bendito seas mi señor. X2
 
-Bendito seas mi señor.`
+Bendito seas mi señor`
     },
       
       {
