--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </head>
 
 <body>
-  <h1>CANTOS PARROQUIA DE GUADALUPE V1.0</h1>
+  <h1>CANTOS CORO PARROQUIA DE GUADALUPE V1.0</h1>
 
   <!-- Botón de cambio de tema -->
   <button onclick="alternarTema()" id="tema-btn">🌙 Modo Oscuro</button>
